update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lz-asia/stargate",
+  "name": "@stargate-protocol/stargate",
   "license": "GPL-3.0-only",
   "version": "1.0.0",
   "files": [
